--- a/Block_ITN2.html
+++ b/Block_ITN2.html
@@ -39,8 +39,33 @@
 					zodpovedajú vašim aktuálnym potrebám a dlhodobým cieľom.
 				</p>
 			</div>
+			<div class="itn-content-flex column-reverse">
 
-			<div class="itn-grid2x2">
+				<div class="itn-img-wrapper">
+					<div class="itn-img-wrapper-inner">
+						<img src="media/KD_ModraSiet.avif" />
+					</div>
+				</div>
+
+				<div class="itn-text-wrapper">
+					<div class="itn-text-itn2">
+						<h3 lang-code="03023">Architekti a dizajnéri</h3>
+						<p lang-code="03024">Navrhovanie robustných IT architektúr a systémových riešení</p>
+
+						<h3 lang-code="03025">Product Owneri a PM</h3>
+						<p lang-code="03026">Riadenie produktov a koordinácia komplexných projektov</p>
+
+						<h3 lang-code="03027">Developeri všetkých úrovní seniority</h3>
+						<p lang-code="03028">Od juniorov po seniorov s rozsiahlymi skúsenosťami</p>
+
+						<h3 lang-code="03029">Testeri a QA apecialisti</h3>
+						<p lang-code="03530">Zabezpečenie kvality a bezchybného fungovania systémov</p>
+					</div>
+				</div>
+
+			</div>
+
+			<!-- <div class="itn-grid2x2">
 				<div class="itn-grid2x2-cell">
 					<div class="itn-grid2x2-logo">
 					<img src="media/KD_vodotlac_N.svg" alt="Logo 1">
@@ -69,7 +94,7 @@
 					<h3 lang-code="03029">Testeri a QA apecialisti</h3>
 					<p lang-code="03530">Zabezpečenie kvality a bezchybného fungovania systémov</p>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
