--- a/Block_ITN3.html
+++ b/Block_ITN3.html
@@ -37,17 +37,8 @@
 			</div>
 			<div class="itn-content-flex column-reverse">
 
-				<div class="itn-img-wrapper">
-					<div class="itn-img-wrapper-inner">
-						<img src="media/KD_teamMeating5ludi.avif" />
-					</div>
-				</div>
-
 				<div class="itn-text-wrapper">
-					<!-- <div class="itn-line-with-img"> -->
-						<h2 lang-code="03032">Flexibilné zvýšenie vašich kapacít</h2>
-						<!-- <img src="media/air-conditioning-outdoor-unit-icon.png" alt="Ikona klimatizacnej jednotky" class="img-invert"> -->
-					<!-- </div> -->
+					<h2 lang-code="03032">Flexibilné zvýšenie vašich kapacít</h2>
 					<p class="margin-small" lang-code="03033">
 						Formou IT nearshoringu a outsourcingu dokážeme flexibilne zvýšiť vaše kapacity v
 						kľúčových oblastiach. Poskytujeme vysoko kvalifikovaných špecialistov, ktorí sa rýchlo
@@ -56,14 +47,18 @@
 					<p class="margin-small" lang-code="03034">Naše služby pokrývajú široké spektrum expertíz:</p>
 					<ul class="itn-custom-list">
 						<li lang-code="03035">Vývojári HW/SW a aplikácií s preukázanými skúsenosťami</li>
-						<li lang-code="03036">Programátori databáz a dátových štruktúr (na báze SQL: Oracle, MySQL, PostgreSQL alebo NoSQL: MongoDB)</li>
-						<li lang-code="03037">SAP špecialisti pre podnikové systémy (S/4HANA špecialisti, ABAP developeri a konzultanti riešení)</li>
+						<li lang-code="03036">Programátori databáz a dátových štruktúr</li>
+						<li lang-code="03037">SAP špecialisti pre podnikové systémy</li>
 						<li lang-code="03038">CRM špecialisti pre riadenie vzťahov so zákazníkmi</li>
 						<li lang-code="03039">Experti na kybernetickú bezpečnosť a ochranu dát</li>
-						<li lang-code="03531">Testeri (špecialisti na manuálne, automatizované, performačné alebo záťažové testy)</li>
-						<li lang-code="03532">Embedded C vývojári pre vývoj Vašich embedovaných zariadení (operačné systémy do vozidiel
-							 a lietadiel, ADAC systémy, dotykové panely, komunikačné zariadenia a iné.)</li>
+						<li lang-code="03532">Vývojári softvéru v jazyku C pre vstavané zariadenia</li>
 					</ul>
+				</div>
+
+				<div class="itn-img-wrapper" style="flex: 3;">
+					<div class="itn-img-wrapper-inner">
+						<img src="media/KD_teamMeating5ludi.avif" />
+					</div>
 				</div>
 
 			</div>
@@ -72,7 +67,7 @@
 
 	<script>
 		async function loadAllTranslations() {
-			const p1 = await LoadTranslations('enilang/translations01-engin.txt');
+			const p1 = await LoadTranslations('enilang/translations03-itn.txt');
 			await Promise.all([p1]);
 		}
 	</script>
