--- a/Block_ITN4.html
+++ b/Block_ITN4.html
@@ -32,60 +32,47 @@
 	<div id="ITN4-div-src">
 		<div class="itn-body color-variant-itn2">
 			<div class="itn-header-line"></div>
-			<div class="itn-content-flex fullstack-flex">
-				<div class="itn-text-wrapper">
-					<h1 lang-code="03041">Fullstack vývojové schopnosti</h1>
-					<div class="itn-fullstack-flex">
-						<div class="itn-fullstack-image">
-							<img src="media/KD_TriSipkyPodSebou-transp.png" alt="Tri šípky pod sebou">
-						</div>
-
-						<div class="itn-fullstack-texts">
-							<div class="itn-innerflex-container">
-								<div class="itn-innerflex-text padding-0">
-									<h3>FrontEnd</h3>
-									<p class="margin-small" lang-code="03042">
-										Moderné užívateľské rozhrania a responzívne webové aplikácie s
-										najnovšími technológiami (Angular, JavaScript, REACT, VUE.js, HTML, CSS a iné).
-									</p>
-								</div>
-							</div>
-							<div class="itn-innerflex-container">
-								<div class="itn-innerflex-text padding-0">
-									<h3>BackEnd</h3>
-									<p class="margin-small" lang-code="03043">
-										Robustné serverové aplikácie, API a databázové riešenia pre náročné
-										systémy (Java, Python, C#/.NET, ASP.NET, NODEjs, PHP a ďalšie).
-									</p>
-								</div>
-							</div>
-							<div class="itn-innerflex-container">
-								<div class="itn-innerflex-text padding-0">
-									<h3>FullStack</h3>
-									<p class="margin-small" lang-code="03044">
-										Zahŕňa širokú škálu technológií pre front-end (používateľské rozhranie) aj back-end (logika na strane servera), 
-										ako aj databázy a ďalšie nástroje. Medzi kľúčové front-endové technológie patrí HTML, CSS a JavaScript spolu
-										s frameworkami ako React, Angular alebo Vue.js. Back-endové technológie zahŕňajú jazyky ako Node.js, Python, Java 
-										a frameworky ako Express.js, Django alebo Spring Boot. Databázy, ako napríklad MySQL, PostgreSQL alebo MongoDB, 
-										sa používajú na ukladanie údajov, zatiaľ čo nástroje ako Git a Docker sú nevyhnutné pre správu verzií a nasadzovanie.
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<p>
-						<span lang-code="03045">Máme rozsiahle skúsenosti s modernými technológiami a frameworkami, vrátane</span>
-						<strong>JAVA, Python, JavaScript, Angular, Vue.js</strong> 
-						<span lang-code="03046">a mnohých ďalších. Naši vývojári sledujú
-						najnovšie trendy a osvedčené postupy v odbore, aby vašim projektom zaistili
-						maximálnu kvalitu a udržateľnosť.</span>
-					</p>
-				</div>
+			<div class="itn-header-text">
+				<h1 lang-code="03041">Fullstack vývojové schopnosti</h1>
+			</div>
+			<div class="itn-content-flex">
 
 				<div class="itn-img-wrapper">
 					<div class="itn-img-wrapper-inner">
 						<img src="media/KD_DisplayZvislo.avif" />
 					</div>
+				</div>
+				
+				<div class="itn-text-wrapper">
+					<div class="itn-text-itn2">
+						<h3>FrontEnd</h3>
+						<p lang-code="03042">
+							Moderné užívateľské rozhrania a responzívne webové aplikácie.
+						</p>
+
+						<h3>BackEnd</h3>
+						<p lang-code="03043">
+							Serverové aplikácie, API a databázové riešenia pre náročné systémy.
+						</p>
+
+						<h3>FullStack</h3>
+						<p lang-code="03044">
+							Kompletné riešenia od front-endu po back-end, vrátane databáz a infraštruktúry.
+						</p>
+					</div>
+					<p>
+						<span lang-code="03045">We have extensive experience with modern technologies, frameworks, and database systems, including</span>
+						<strong>Java, Python, C#/.NET, ASP.NET, Node.js, PHP, </strong>
+						<span lang-code="03046">ako aj front-end riešení ako </span>
+						<strong>JavaScript, Angular, React, Vue.js, HTML a CSS. </strong>
+						<span lang-code="03047">Pracujeme so systémami </span>
+						<strong>Oracle, MySQL, PostgreSQL a MongoDB</strong>
+						<span lang-code="03048"> a využívame nástroje ako </span>
+						<strong>Spring Boot, Django, Express.js, Git a Docker.</strong>
+						<span lang-code="03049">
+							Naši vývojári sledujú najnovšie trendy a osvedčené postupy, aby vašim projektom zaistili maximálnu kvalitu, stabilitu a dlhodobú udržateľnosť.
+						</span>
+					</p>
 				</div>
 
 			</div>
