--- a/Block_ITN5.html
+++ b/Block_ITN5.html
@@ -34,71 +34,37 @@
 			<div class="itn-header-line"></div>
 			<div class="itn-header-text">
 				<h1 lang-code="03051">Riadenie a koordinácia IT projektov</h1>
+				<p lang-code="03053">
+					Poskytujeme vysoko kvalifikovaných špecialistov na riadenie a
+					koordináciu IT projektov na všetkých úrovniach. Naši projektoví
+					manažéri a koordinátori majú preukázané skúsenosti s vedením
+					komplexných medzinárodných projektov.
+				</p>
 			</div>
 			<div class="itn-content-flex">
 
 				<div class="itn-text-wrapper">
-					<div class="itn-line-with-img">
-						<h2 lang-code="03052">Expertný projektový manažment</h2>
-						<!-- <img src="media/air-conditioning-outdoor-unit-icon.png" alt="Ikona klimatizacnej jednotky" class="img-invert"> -->
-					</div>
-					<p class="margin-small" lang-code="03053">
-						Poskytujeme vysoko kvalifikovaných špecialistov na riadenie a
-						koordináciu IT projektov na všetkých úrovniach. Naši projektoví
-						manažéri a koordinátori majú preukázané skúsenosti s vedením
-						komplexných medzinárodných projektov.
-					</p>
-					<div class="itn-O-wrapper">
-						<p>O1</p>
-						<div class="itn-O-line"></div>
-						<p>
-							<h3 lang-code="03054">Projektoví manažéri</h3>
-							<span lang-code="03055">Celkové riadenie projektov a koordinácia tímov</span>
-						</p>
-					</div>
-					<div class="itn-O-wrapper">
-						<p>O2</p>
-						<div class="itn-O-line"></div>
-						<p>
-							<h3 lang-code="03056">Manažéri požiadaviek</h3>
-							<span lang-code="03057">Analýza a správa biznis požiadaviek</span>
-						</p>
-					</div>
-					<div class="itn-O-wrapper">
-						<p>O3</p>
-						<div class="itn-O-line"></div>
-						<p>
-							<h3 lang-code="03058">Manažéri zabezpečenia kvality (Quality Assurance)</h3>
-							<span lang-code="03059">Riadenie kvality a testovacích procesov</span>
-						</p>
-					</div>
-					<div class="itn-O-wrapper">
-						<p>O4</p>
-						<div class="itn-O-line"></div>
-						<p>
-							<h3 lang-code="03551">Scrum Master špecialisti</h3>
-							<span lang-code="03552">Agilné metodiky a facilitácia tímov</span>
-						</p>
-					</div>
-					<div class="itn-O-wrapper">
-						<p>O5</p>
-						<div class="itn-O-line"></div>
-						<p>
-							<h3 lang-code="03553">Dátový manažment</h3>
-							<span lang-code="03554">Manažment a správa firemných dát</span>
-						</p>
-					</div>
+					<div class="itn-text-itn2">
+						<h3 lang-code="03054">Projektoví manažéri</h3>
+						<p lang-code="03055">Celkové riadenie projektov a koordinácia tímov</p>
 
+						<h3 lang-code="03056">Manažéri požiadaviek</h3>
+						<p lang-code="03057">Analýza a správa obchodných požiadaviek</p>
+
+						<h3 lang-code="03058">Manažéri zabezpečenia kvality (Quality Assurance)</h3>
+						<p lang-code="03059">Riadenie kvality a testovacích procesov</p>
+
+						<h3 lang-code="03551">Scrum Master špecialisti</h3>
+						<p lang-code="03552">Agilné metodiky a facilitácia tímov</p>
+
+						<h3 lang-code="03553">Dátový manažment</h3>
+						<p lang-code="03554">Manažment a správa firemných dát</p>
+					</div>
 				</div>
 
 				<div class="itn-img-wrapper">
-					<div class="itn-img-wrapper-grid21">
-						<div class="itn-img-wrapper-inner">
-							<img src="media/KD_OkoloStolaPodLampami.avif" />
-						</div>
-						<div class="itn-img-wrapper-inner">
-							<img src="media/KD_DisplayStvorec.avif" />
-						</div>
+					<div class="itn-img-wrapper-inner">
+						<img src="media/KD_DisplayStvorec.avif" />
 					</div>
 				</div>
 			</div>
@@ -117,7 +83,6 @@
 			await UpdateTexts();
 			await new Promise(requestAnimationFrame);
 			Animator.registerAll(".itn-header-line", "animate-width-grow");
-			Animator.registerAll(".itn-O-line", "animate-width-grow");
 			document.body.style.visibility = "visible";
 		});
 	</script>
