--- a/Block_ITN9.html
+++ b/Block_ITN9.html
@@ -37,6 +37,12 @@
 			</div> -->
 			<div class="itn-content-flex">
 
+				<div class="itn-img-wrapper">
+					<div class="itn-img-wrapper-inner">
+						<img src="media/KD_handshaking.avif" />
+					</div>
+				</div>
+
 				<div class="itn-text-wrapper">
 					<h3 lang-code="03092">Poďme spoločne realizovať vaše projekty</h3>
 					<p class="margin-small" lang-code="03093">
@@ -51,24 +57,12 @@
 					</p>
 					<div class="itn-buttons flex-justify">
 						<button class="itn-button" lang-code="03095"
-							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Napíšte nám</button>
-						<button class="itn-button" lang-code="03096" 
-							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Zavolajte nám</button>
+							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Kontaktujte nás</button>
+						<!-- <button class="itn-button" lang-code="03096" 
+							onclick="location.href='indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska'">Zavolajte nám</button> -->
 					</div>
 				</div>
 
-				<div class="itn-img-wrapper">
-					<div class="itn-img-wrapper-inner">
-						<img src="media/KD_handshaking.avif" />
-					</div>
-				</div>
-
-			</div>
-			<div class="itn-header-text" style="margin-top: 0;">
-				<div class="itn-footer-line"></div>
-				<p>
-					<strong>ENITECH s.r.o.</strong> - <span lang-code="03097">Váš partner pre komplexné IT riešenia a priemyselnú automatizáciu</span>
-				</p>
 			</div>
 		</div>
 	</div>
