--- a/indexOnas.html
+++ b/indexOnas.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="enicss/UvodHero.css">
 	<link rel="stylesheet" href="enicss/uvod1.css">
 	<link rel="stylesheet" href="enicss/onas.css">
+	<link rel="stylesheet" href="enicss/onas4.css">
 	<link rel="stylesheet" href="enicss/ref.css">
 	<link rel="stylesheet" href="enicss/footer.css">
 
@@ -50,6 +51,9 @@
 	<div id="Onas2-div-dst">
 	</div>
 
+	<div id="Onas4-div-dst">
+	</div>
+
 	<div id="Ref-Onas3-div-dst">
 	</div>
 
@@ -69,10 +73,11 @@
 			const p3 = ImportDiv("Block_Uvod1.html", "Uvod1-div-src", "Uvod1-div-dst");
 			const p4 = ImportDiv("Block_Onas1.html", "Onas1-div-src", "Onas1-div-dst");
 			const p5 = ImportDiv("Block_Onas2.html", "Onas2-div-src", "Onas2-div-dst");
-			const p6 = ImportDiv("Block_Ref.html", "Ref-Onas3-div-src", "Ref-Onas3-div-dst");
-			const p7 = ImportDiv("Block_Ref.html", "Ref-div-src", "Ref-div-dst");
-			const p8 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
-			await Promise.all([p1, p2, p3, p4, p5, p7, p8]);
+			const p6 = ImportDiv("Block_Onas4.html", "Onas4-div-src", "Onas4-div-dst");
+			const p7 = ImportDiv("Block_Ref.html", "Ref-Onas3-div-src", "Ref-Onas3-div-dst");
+			const p8 = ImportDiv("Block_Ref.html", "Ref-div-src", "Ref-div-dst");
+			const p9 = ImportDiv("Block_Footer.html", "Footer-div-src", "Footer-div-dst");
+			await Promise.all([p1, p2, p3, p4, p5, p7, p8, p9]);
 		}
 	</script>
 
@@ -83,6 +88,7 @@
 			await new Promise(requestAnimationFrame);
 			await LoadTranslations('enilang/translations00.txt');
 			await LoadTranslations('enilang/translations01-engin.txt');
+			// await LoadTranslations('enilang/translations03-itn.txt');
 			await LoadTranslations('enilang/translations07-ref.txt');
 			await LoadTranslations('enilang/translations09-foot.txt');
 			await UpdateTexts();
@@ -90,6 +96,7 @@
 			Animator.register("#uvod-hero_animate-id", "animate-slide-in-bounce");
 			Animator.register("#id-ref-onas3-animate", "animate-rotateFlipIn");
 			Animator.registerAll(".onas-header-line", "animate-width-grow");
+			Animator.registerAll(".onas4-header-line", "animate-width-grow");
 			Animator.registerAll(".ref-onas3-header-line", "animate-width-grow");
 			Animator.register("#idCertificateBtn", "animate-double-shake");
 			onas2_initModal();
