--- a/Block_EnginAutom1.html
+++ b/Block_EnginAutom1.html
@@ -30,7 +30,8 @@
 
 <body>
 	<div id="EnginAutom1-div-src">
-		<div class="engin-body color-variant-enginautom1">
+		<!-- <div class="engin-body color-variant-enginautom1"> -->
+		<div class="engin-body color-variant-engin1">
 			<div class="engin-header-line"></div>
 
 			<div class="engin-content-flex column-reverse">
@@ -45,7 +46,7 @@
 				<div class="engin-text-wrapper">
 					<div class="engin-line-with-img">
 						<h3 lang-code="01701">Automatizácia</h3>
-						<img src="media/robot-icon.png" alt="Ikona robota" class="img-invert">
+						<img src="media/robot-icon.png" alt="Ikona robota">
 					</div>
 					<p lang-code="01702">Vieme podporiť Vaše potreby v oblasti automatizácie s
 						<strong-500>programovaním automatizovaných liniek</strong-500> a systémov alebo
@@ -60,11 +61,7 @@
 							FANUC</strong-500>, ale aj <strong-500>STAUBLI</strong-500>, či <strong-500>YASKAWA</strong-500>
 					</p>
 					<div class="engin-more-info-container">
-						<a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01705" style="
-							--text-color: #a8cfff;
-							--hover-color: #ffffff;
-							--underline-color: #ffffff;">
-							Viac informácií</a>
+						<a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01705">Viac informácií</a>
 					</div>
 				</div>
 			</div>
