--- a/Block_EnginElekt1.html
+++ b/Block_EnginElekt1.html
@@ -28,7 +28,8 @@
 </head>
 <body>
   <div id="EnginElekt1-div-src">
-    <div class="engin-body color-variant-enginelekt1">
+    <!-- <div class="engin-body color-variant-enginelekt1"> -->
+    <div class="engin-body color-variant-engin2">
       <div class="engin-header-line"></div>
 
       <div class="engin-content-flex column-reverse">
@@ -43,7 +44,7 @@
         <div class="engin-text-wrapper">
             <div class="engin-line-with-img">
               <h3 lang-code="01601">Elektro-konštrukcia</h3>
-              <img src="media/plosny-spoj-icon.png" alt="Ikona plosneho spoja"  class="img-invert">
+              <img src="media/plosny-spoj-icon.png" alt="Ikona plosneho spoja">
             </div>
               <p lang-code="01602">V oblasti elektro Vás vieme podporiť v systéme 
                 <strong>EPLAN P8</strong> pri návrhu, plánovaní a optimalizácii 
@@ -52,11 +53,7 @@
                  plošných spojov(</span><strong-500 lang-code="01604">PCB  dizajn</strong-500><span>).</span>
 			  </p>
             <div class="engin-more-info-container">
-              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01605" style="
-                --text-color: #a8cfff;
-                --hover-color: #ffffff;
-                --underline-color: #ffffff;">
-				  Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01605">Viac informácií</a>
             </div>
         </div>
       </div>
