--- a/Block_Onas4.html
+++ b/Block_Onas4.html
@@ -33,7 +33,7 @@
 		<div class="onas4-body color-variant-onas4">
 			<div class="onas4-header-line"></div>
 			<div class="onas4-header-text">
-				<h1 lang-code="00081">Prečo si zvoliť ENITECH?</h1>
+				<h2 lang-code="00081">Prečo si zvoliť ENITECH?</h2>
 			</div>
 			<div class="onas4-grid2x2">
 
@@ -42,7 +42,8 @@
 						<img src="media/KD_portret-icon.svg" class="onas4-innerflex-imgformat8">
 					</div>
 					<div class="onas4-innerflex-text">
-						<h3 lang-code="00082">Overené skúsenosti</h3>
+						<p class="header" lang-code="00082">Overené skúsenosti</p>
+						</p>
 						<p class="margin-small" lang-code="00083">
 							Zrealizovali sme desiatky projektov pre telekomunikácie,
 							bankovníctvo, verejnú správu aj priemysel. Naše referencie
@@ -55,7 +56,8 @@
 						<img src="media/KD_gymnasta-icon.svg" class="onas4-innerflex-imgformat8">
 					</div>
 					<div class="onas4-innerflex-text">
-						<h3 lang-code="00084">Flexibilný prístup</h3>
+						<p class="header" lang-code="00084">Flexibilný prístup</p>
+						</p>
 						<p class="margin-small" lang-code="00085">
 							Rýchlo sa adaptujeme na vaše potreby, či už ide o krátkodobé
 							posilnenie tímu alebo dlhodobú spoluprácu.
@@ -68,7 +70,8 @@
 						<img src="media/KD_certifikat-icon.svg" class="onas4-innerflex-imgformat8">
 					</div>
 					<div class="onas4-innerflex-text">
-						<h3 lang-code="00086">Zaručená kvalita</h3>
+						<p class="header" lang-code="00086">Zaručená kvalita</p>
+						</p>
 						<p class="margin-small" lang-code="00087">
 							Všetci naši špecialisti prechádzajú dôkladným výberovým
 							konaním a majú preukázané odborné znalosti.
@@ -80,7 +83,8 @@
 						<img src="media/KD_globus-icon.svg" class="onas4-innerflex-imgformat8">
 					</div>
 					<div class="onas4-innerflex-text">
-						<h3 lang-code="00088">Medzinárodný dosah</h3>
+						<p class="header" lang-code="00088">Medzinárodný dosah</p>
+						</p>
 						<p class="margin-small" lang-code="00089">
 							Pracujeme s domácimi aj zahraničnými klientmi, máme
 							skúsenosti s multikultúrnymi projektmi.
@@ -93,7 +97,7 @@
 						<img src="media/KD_dollar-icon.svg" class="onas4-innerflex-imgformat8">
 					</div>
 					<div class="onas4-innerflex-text">
-						<h3 lang-code="00581">Moderné technológie</h3>
+						<p class="header" lang-code="00581">Moderné technológie</p>
 						<p lang-code="00582">
 							Držíme krok s najnovšími trendmi a technológiami v IT aj
 							priemyselnej automatizácii.
@@ -105,7 +109,7 @@
 						<img src="media/KD_handshake-icon.svg" class="onas4-innerflex-imgformat8">
 					</div>
 					<div class="onas4-innerflex-text">
-						<h3 lang-code="00583">Partnerský prístup</h3>
+						<p class="header" lang-code="00583">Partnerský prístup</p>
 						<p lang-code="00584">
 							Nie sme len dodávateľ služieb - sme váš partner pre dlhodobý
 							úspech a rast.
