--- a/Block_EnginExt1.html
+++ b/Block_EnginExt1.html
@@ -28,14 +28,16 @@
 </head>
 <body>
   <div id="EnginExt1-div-src">
-    <div class="engin-body color-variant-enginext1">
+    <!-- <div class="engin-body color-variant-enginext1"> -->
+    <div class="engin-body color-variant-engin1">
       <div class="engin-header-line"></div>
       <div class="engin-content-flex">
 
         <div class="engin-text-wrapper">
             <div class="engin-line-with-img">
               <h2 lang-code="01501">Externá konštrukcia:</h2>
-              <img src="media/air-conditioning-outdoor-unit-icon.png" alt="Ikona klimatizacnej jednotky" class="img-invert">
+              <!-- <img src="media/air-conditioning-outdoor-unit-icon.png" alt="Ikona klimatizacnej jednotky" class="img-invert"> -->
+              <img src="media/air-conditioning-outdoor-unit-icon.png" alt="Ikona klimatizacnej jednotky">
             </div>
               <p lang-code="01502">U našich zákazníkov realizujeme projekty:</p>
               <ul class="custom-list">
@@ -46,17 +48,15 @@
               </ul>
               <p lang-code="01507">Tu pracujeme so systémami podľa požiadaviek zákazníka.</p>
             <div class="engin-more-info-container">
-              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01508" style="
-                --text-color: #a8cfff;
-                --hover-color: #ffffff;
-                --underline-color: #ffffff;">
-				  Viac informácií</a>
+              <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01508">Viac informácií</a>
             </div>
         </div>
 
         <div class="engin-img-wrapper">
           <div class="engin-img-wrapper-inner">
-            <img src="media/TurboDuchadlo-automobil.avif"/>
+			<div class="img-bg">
+            	<img src="media/TurboDuchadlo-automobil.avif">
+			</div>
           </div>
         </div>
 
