--- a/Block_EnginElekt1.html
+++ b/Block_EnginElekt1.html
@@ -32,15 +32,7 @@
     <div class="engin-body color-variant-engin2">
       <div class="engin-header-line"></div>
 
-      <div class="engin-content-flex column-reverse">
-        <div class="engin-img-wrapper">
-          <div class="engin-img-wrapper-inner">
-            <img src="media/Plosny-spoj-s-vykresom.avif"/>
-          </div>
-        </div>
-
-        <div class="engin-divider"></div>
-
+      <div class="engin-content-flex">
         <div class="engin-text-wrapper">
             <div class="engin-line-with-img">
               <h3 lang-code="01601">Elektro-konštrukcia</h3>
@@ -55,6 +47,12 @@
             <div class="engin-more-info-container">
               <a href="indexKontakt.html#id-kontakt-Kracala,id-kontakt-Ivaska" class="animate-text-underline" lang-code="01605">Viac informácií</a>
             </div>
+        </div>
+
+        <div class="engin-img-wrapper">
+          <div class="engin-img-wrapper-inner">
+            <img src="media/Plosny-spoj-s-vykresom.avif"/>
+          </div>
         </div>
       </div>
     </div>
