--- a/Block_EnginInt1.html
+++ b/Block_EnginInt1.html
@@ -32,7 +32,7 @@
 			<div class="engin-header-line"></div>
 			<!-- <p class="engin-great-p" lang-code="01101">Spoľahlivá a efektívna podpora v oblasti konštrukčných prác doma aj v zahraničí.</p> -->
 
-			<div class="engin-content-flex" style="padding: 0; padding-top: 1vw;  gap: 2vw;">
+			<div class="engin-content-flex column-reverse" style="padding: 0; padding-top: 1vw;  gap: 2vw;">
 				<div class="engin-img-wrapper">
 					<div class="engin-img-wrapper-inner">
 						<img src="media/InternaKonstr-traja-monitor.avif" alt="Obrazok" />
