--- a/Block_KarieraCV.html
+++ b/Block_KarieraCV.html
@@ -45,7 +45,7 @@
 				<h3 lang-code="08018">Zaujala vás uvedená pracovná ponuka?</h3>
 				<p lang-code="08019">Pošlite nám viac informácií o vás spolu so štrukturovaným životopisom.</p>
 				<div class="formular-animate-line"></div>
-				<form id="id-cv-form"  method="POST" action="Form_KarieraCV.php" onsubmit="do_cv_submit(event)">
+				<form id="id-cv-form"  method="POST" action="Form_EniKarieraCV.php" onsubmit="do_cv_submit(event)">
 					<div class="formular-grid">
 						<div class="formular-group">
 							<label for="id-cv-meno">Krstné meno *</label>
