--- a/Block_Kontakt1.html
+++ b/Block_Kontakt1.html
@@ -44,7 +44,7 @@
 			<div class="kontakt1-bottom" style="background-image: url('media/close-up-person-working-call-center.avif');">
 				<div class="kontakt1-form-wrapper">
 					<div class="formular-wrapper">
-						<form id="id-kontakt1-form" method="POST" action="Form_Kontakt1.php">
+						<form id="id-kontakt1-form" method="POST" action="Form_EniKontakt.php">
 							<div class="formular-grid">
 								<div class="formular-group">
 									<label for="id-kontakt1-meno" lang-code="05011">Krstné meno *</label>
