--- a/Block_Uvod1.html
+++ b/Block_Uvod1.html
@@ -26,7 +26,7 @@
 					<p lang-code="00122">Naše IT a inžinierske služby zvyšujú efektivitu a prinášajú inovácie v organizáciách naprieč Európou.</p>
 					<p lang-code="00123">Dohodnite si s nami nezáväznú konzultáciu a zistite, aké riešenia vieme pripraviť pre vás.</p>
 					<p>
-						<strong lang-code="00124">Napíšte, alebo zavolajte nám ešte dnes.</strong><br>
+						<strong lang-code="00124">Napíšte nám ešte dnes.</strong><br>
 						<span lang-code="00125">Radi preskúmame možnosti spolupráce priamo pre vašu firmu.</span>
 					</p>
 					<div class="uvod1-contact-button-wrapper">
